// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Breadcrumbs/Drop Down With targets 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="breadCrumbBar"
      >
        <li
          onClick={[Function]}
          role="Menu"
        >
          <div
            className="targetContainer"
            style={
              Object {
                "color": "white",
                "marginLeft": "20px",
              }
            }
          >
            <div
              className="targetLabel"
            >
              Current Target
            </div>
            <svg
              className="chevron"
              fill="none"
              height={30}
              stroke="white"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginLeft": "10px",
                }
              }
              viewBox="0 0 24 24"
              width={30}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </li>
      </div>
      <style
        jsx={true}
      >
        
          .root {
            display: flex;
            flex: 1;
          }
          * {
            margin: 0;
            padding: 0;
          }

          .targetLabel {
            padding-top: 5px;
          }
          .targetContainer {
            width: 100%;
            display: flex;
          }
          li {
            display: flex;
            align-items: center;
            height: 35px;
            overflow: hidden;
          }
          li:before {
            content: '';
            height: 32px;
            width: 32px;
            right: 20px;
            margin-top: 5px;
            border-top: 1px solid #66a1c1;
            border-right: 1px solid #66a1c1;
            transform: rotate(45deg);
          }
          .targetLabel {
            color: 'white';
          }
          .listContainer {
            position: absolute;
            margin-top: 35px;
            padding: 8px 0;
            margin-left: 50px;
            border-style: solid;
            border-width: 2px;
            border-color: #ebebeb;
            border-radius: 4px;
            background-color: white;
            z-index: 1;
          }
        
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Breadcrumbs/Drop Down Without targets 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="breadCrumbBar"
      >
        <li
          onClick={[Function]}
          role="Menu"
        >
          <div
            className="targetContainer"
            style={
              Object {
                "color": "white",
                "marginLeft": "20px",
              }
            }
          >
            <div
              className="targetLabel"
            >
              Current Target
            </div>
          </div>
        </li>
      </div>
      <style
        jsx={true}
      >
        
          .root {
            display: flex;
            flex: 1;
          }
          * {
            margin: 0;
            padding: 0;
          }

          .targetLabel {
            padding-top: 5px;
          }
          .targetContainer {
            width: 100%;
            display: flex;
          }
          li {
            display: flex;
            align-items: center;
            height: 35px;
            overflow: hidden;
          }
          li:before {
            content: '';
            height: 32px;
            width: 32px;
            right: 20px;
            margin-top: 5px;
            border-top: 1px solid #66a1c1;
            border-right: 1px solid #66a1c1;
            transform: rotate(45deg);
          }
          .targetLabel {
            color: 'white';
          }
          .listContainer {
            position: absolute;
            margin-top: 35px;
            padding: 8px 0;
            margin-left: 50px;
            border-style: solid;
            border-width: 2px;
            border-color: #ebebeb;
            border-radius: 4px;
            background-color: white;
            z-index: 1;
          }
        
      </style>
    </div>
  </div>
</div>
`;
